feat: add css-slider

--- a/style.css
+++ b/style.css
@@ -600,8 +600,8 @@ h3 {
 	background: url("img/eco-sounds.png") no-repeat; 
  }
 
-.movie {
-	background: url("img/movie-app.png") no-repeat; 
+.slider {
+	background: url("img/css-slider.png") no-repeat; 
  }
 
 .shelter {
